# kube-mongui

./: Cargo.toml  README.md
src/: cli_args.rs  kubeproxy.rs  main.rs
src/data/: container.rs  cronjob.rs  mod.rs  node.rs  pod.rs
src/libs/: mod.rs
src/libs/k8s/: mod.rs
src/libs/notifications/: mod.rs
src/libs/notifications/sys/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/tabs/: cronjobs.rs  mod.rs  nodes.rs  pods.rs
src/updater/: mod.rs  namespace.rs
src/updaters/: cronjobs.rs  mod.rs  namespace.rs  nodes.rs  pods.rs
src/util/: mod.rs  notification_util.rs  request_util.rs
src/util/notifications/: mod.rs
