[package]
name = "kube-mongui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1", features = ["dark-light"] }
scanf = "1.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.89"
clap = { version = "4.0.29", features = ["derive"] }
