[package]
name = "kube-mongui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
eframe = { version = "0.20.1", features = ["dark-light"] }
k8s-metrics = "0.10.0"
k8s-openapi = { version = "0.17.0", features = ["v1_23"] }
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_info"] }
notify-rust = "4.7.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scanf = "1.2.1"
serde = "1.0.152"
serde_json = "1.0.91"
simple_logger = "4.0.0"
